--- a/web/index.html
+++ b/web/index.html
@@ -32,6 +32,7 @@
 
   <title>smart_waste</title>
   <link rel="manifest" href="manifest.json">
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPnGaVPkRJCqaYOZaPplzZc1EW7_fpMbo"></script>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
